# ONSdigital.blaise-publish-bucket-metadata

./: .flake8  .gcloudignore  .gitignore  .mypy.ini  Makefile  README.md  cloudbuild copy.yaml  cloudbuild.yaml  config.py  data-sent-by-gcp-to-storage-func.json  dde-meta-template.json  key.gpg  main.py  message.py  mi-meta-template.json  msg.json  pyproject.toml  requirements.txt  sub-msg-recieved-test.json  test-data-from-gcp.json  test.py  utils.py
datadeliverystatus/: data-delivery-status-functions.py  data_delivery_status_functions.py
models/: config.py  message.py
slack/: slack-notify.py
tests/: conftest.py  test_config.py  test_main.py  test_message.py  test_utils.py
tests/models/: test_config.py  test_message.py
