[tool.poetry]
name = "blaise-publish-bucket-metadata"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <sam.bryant@armakuni.com>"]

[tool.poetry.dependencies]
python = "^3.7"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", rev = "main"}
google-cloud-pubsub = "^2.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
pytest = "^6.2.3"
mypy = "^0.812"
flake8-cognitive-complexity = "^0.1.0"
pytest-flakefinder = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
